<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:padding="@dimen/no_dimen"
    tools:context="br.com.battista.arcadiacaller.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            style="@style/AppTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_app"
            android:textAllCaps="true"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_username"
                style="@style/InputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint_btn_login"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/chb_saved_username"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_saved_username"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonStyleActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:onClick="login"
                android:text="@string/btn_login"/>

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/ButtonBorderLessStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btn_login"
                android:layout_toStartOf="@id/btn_login"
                android:onClick="signIn"
                android:text="@string/btn_sign_in"/>

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/button_sign_in_margin"
        android:layout_marginRight="@dimen/button_sign_in_margin"
        android:gravity="center"/>

</RelativeLayout>
