<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_campaign"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:checked="true"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home"/>

        <item
            android:id="@+id/nav_menu_campaign"
            android:icon="@drawable/ic_menu_campaign"
            android:title="@string/title_campaigns"/>

        <item
            android:id="@+id/nav_menu_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title="@string/title_friends"/>
    </group>

    <group
        android:id="@+id/group_manager"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_heroes"
            android:icon="@drawable/ic_menu_heroes"
            android:title="@string/title_heroes"/>

        <item
            android:id="@+id/nav_menu_cards"
            android:icon="@drawable/ic_menu_cards"
            android:title="@string/title_cards"/>

        <item
            android:id="@+id/nav_menu_sceneries"
            android:icon="@drawable/ic_menu_sceneries"
            android:title="@string/title_sceneries"/>
    </group>

    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/title_about"/>

        <item
            android:id="@+id/nav_menu_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/title_logout"/>
    </group>

</menu>
